force-app/main/default/objects/csfb__Conductor__c/csfb__Conductor__c.object-meta.xml
<CustomObject>
    <label>Conga Invoice Batch</label>
    <nameField>
        <displayFormat>Conga Batch-{0000}</displayFormat>
        <label>Conga Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Invoice Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>