force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Consolidated_PDF_Output_File__c.field-meta.xml
<CustomField>
    <fullName>csfb__Consolidated_PDF_Output_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Combine PDFs into a single file when scheduling a consolidated Conga Batch routine and delivering to a Content Workspace.</inlineHelpText>
    <label>Consolidated PDF Output File</label>
    <type>Checkbox</type>
</CustomField>