force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Content_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Content_Workspace_Id__c</fullName>
    <inlineHelpText>The ID of a Content Library where files from a scheduled Conga Batch process will be stored when the output mode is set to download.</inlineHelpText>
    <label>Content Workspace ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>