force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Description__c.field-meta.xml
<CustomField>
    <fullName>csfb__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>