force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Has_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Has_Record_Id__c</fullName>
    <formula>IF(  ISBLANK( csfb__Record_Id__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>