force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Query_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Query_Id__c</fullName>
    <inlineHelpText>The ID of a Conga Query record that returns the list of Master Object record IDs. Optionally, the query may include other fields.</inlineHelpText>
    <label>Query ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>