force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>csfb__Schedule_Description__c</fullName>
    <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
    <label>Schedule Description</label>
    <type>TextArea</type>
</CustomField>