force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Schedule_Description_Display__c.field-meta.xml
<CustomField>
    <fullName>csfb__Schedule_Description_Display__c</fullName>
    <formula>csfb__Schedule_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated by the Conga Batch schedule.</inlineHelpText>
    <label>Schedule Description</label>
    <type>Text</type>
</CustomField>