force-app/main/default/objects/csfb__Conductor__c/fields/csfb__Title__c.field-meta.xml
<CustomField>
    <fullName>csfb__Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>