force-app/main/default/objects/csfb__Conductor__c/fields/csfb__URL_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__URL_Field_Name__c</fullName>
    <inlineHelpText>The API name of the formula field that contains the converted Conga Composer button / link URL.</inlineHelpText>
    <label>URL Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>