force-app/main/default/objects/csfb__Conductor__c/validationRules/csfb__Either_Report_or_Query_Id_must_be_suppli.validationRule-meta.xml
<ValidationRule>
    <fullName>csfb__Either_Report_or_Query_Id_must_be_suppli</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  ISBLANK(csfb__Report_Id__c ), ISBLANK( csfb__Query_Id__c ), ISBLANK( csfb__Record_Id__c ))</errorConditionFormula>
    <errorDisplayField>csfb__Report_Id__c</errorDisplayField>
    <errorMessage>You must supply one of the following: a Report Id, a Query Id or a Record Id.</errorMessage>
</ValidationRule>