force-app/main/default/objects/csfb__Conductor__c/validationRules/csfb__Query_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>csfb__Query_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  csfb__Query_Id__c != &quot;&quot; ,

OR( LEN(  csfb__Query_Id__c  ) &gt; 18 ,
LEFT(  csfb__Query_Id__c , 1) != &quot;a&quot; ))</errorConditionFormula>
    <errorDisplayField>csfb__Query_Id__c</errorDisplayField>
    <errorMessage>The Query Id must be a 15- or 18-character Salesforce ID from a Conga Query</errorMessage>
</ValidationRule>