force-app/main/default/objects/csfb__Conductor__c/validationRules/csfb__Record_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>csfb__Record_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND( csfb__Record_Id__c != &quot;&quot; ,

LEN( csfb__Record_Id__c ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>csfb__Record_Id__c</errorDisplayField>
    <errorMessage>The Record Id must be a 15- or 18-character Salesforce ID</errorMessage>
</ValidationRule>