force-app/main/default/objects/csfb__Conductor__c/validationRules/csfb__URL_Field_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>csfb__URL_Field_Name_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( csfb__URL_Field_Name__c )</errorConditionFormula>
    <errorDisplayField>csfb__URL_Field_Name__c</errorDisplayField>
    <errorMessage>You must supply the API Name of the field that contains the Composer URL</errorMessage>
</ValidationRule>