force-app/main/default/objects/csfb__Conductor__c/listViews/csfb__All.listView-meta.xml
<ListView>
    <fullName>csfb__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>